@@ -1,2 +1,0 @@
-1	{(1,tom),(2,jerry)}	(1.01,sun)	[key3#c,key2#b,key1#a]
-2	{(6,cat),(7,dog),(8,pig)}	(2.3,moon)	[key4#value4,key1#value1,key2#]
