@@ -226,6 +226,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3454: Update JsonLoader/JsonStorage (tyro89 via daijy)
+
 PIG-3333: Fix remaining Windows core unit test failures (daijy)
 
 PIG-3426: Add support for removing s3 files (jeremykarn via daijy)
